refactor: OSM now uses HashMaps instead of ArrayLists